[tool.poetry]
name = "morph-example"
version = "0.1.0"
description = ""
authors = ["Keita Mitsuhashi <keita.mitsuhashi.83@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
morph-data = "0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
